--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.4",
+    "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "typescript": "^4.9.4"
   }
 }
