--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "daisyui": "^2.46.1"
   }
 }
