--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "vitest"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
@@ -13,15 +14,19 @@
     "@tsconfig/strictest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "@vue/test-utils": "^2.2.7",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-tailwindcss": "^3.8.0",
     "eslint-plugin-vue": "^9.9.0",
+    "jsdom": "^21.0.0",
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.12.1",
+    "vitest": "^0.27.1"
   },
   "dependencies": {
     "daisyui": "^2.46.1"
