--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-tailwindcss": "^3.8.0",
+    "eslint-plugin-vitest": "^0.0.29",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.0.0",
     "nuxt": "^3.0.0",
