--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@storybook/builder-vite": "^0.2.7",
     "@storybook/testing-library": "^0.0.13",
     "@storybook/vue3": "^6.5.15",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@tsconfig/strictest": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
@@ -37,6 +38,7 @@
     "nuxt": "^3.0.0",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.12.1",
     "vitest": "^0.27.1",
